--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^10.2.0",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "supertest": "^6.3.3"
   }
 }
