--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
     "redis": "^4.6.11",
+    "redis-server": "^1.2.2",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
   },
